# TP_CPP_PROJECT

./: .gitignore  BaseBuilding.cpp  BaseBuilding.h  CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Level.cpp  Level.h  MapObject.cpp  MapObject.h  Object.cpp  Object.h  Player.cpp  Player.h  README.md  Unit.cpp  Unit.h  class_diagramm_open_in_draw_io.xml  main.cpp  xmlmap.tmx
.circleci/: config.yml
Classes/: Doxyfile
Classes/headers/: EnemyPlayer.hpp  EnemyUnit.hpp  GameObject.hpp  GameScene.hpp  Globals.h  MyBuilding.hpp  MyUnit.hpp  Player.hpp
Classes/src/: AppDelegate.cpp  EnemyPlayer.cpp  EnemyUnit.cpp  GameObject.cpp  GameScene.cpp  Globals.cpp  Level.cpp  MyBuilding.cpp  MyUnit.cpp  Player.cpp
Client/Classes/headers/: EnemyBuilding.hpp  EnemyPlayer.hpp  EnemyUnit.hpp  GameObject.hpp  Globals.h  Level.hpp  MenuScene.hpp  MyBuilding.hpp  MyUnit.hpp
Client/Classes/src/: EnemyBuilding.cpp  EnemyPlayer.cpp  GameObject.cpp  Globals.cpp  MenuScene.cpp  MyBuilding.cpp  Player.cpp
Client/Resources/: TileMap.tmx  warrior.plist  warriorAnim.plist
Net/: .gitignore  AbstractClientNetObject.cpp  AbstractClientNetObject.h  AbstractServerNetObject.cpp  CMakeLists.txt  ClientNetObject.cpp  ClientNetObject.h  DefaultAbstractFactory.h  NetObject.cpp  NetObject.h  Packet.cpp  Packet.h  Serializable.cpp  ServerNetObject.cpp  ServerNetObject.h
Net/include/: AbstractClientNetObject.h  AbstractServerNetObject.h  ClientNetObject.h  DefaultAbstractFactory.h  NetObject.h  Serializable.h  ServerNetObject.h  SubSock.h
Net/src/: AbstractClientNetObject.cpp  AbstractServerNetObject.cpp  ClientNetObject.cpp  ClientNetObjectImpl.cpp  NetObject.cpp  Serializable.cpp  SerializationOperation.cpp  ServerNetObject.cpp  ServerNetObjectImpl.cpp  SubSock.cpp
Net/test/: gtest.cpp  packet_tests.cpp  serialization_operation_test.cpp
Resources/: TileMap.tmx  f.plist  fightAnim.plist  xmlmap.tmx
html/: abstract__base_8hpp.html  abstract__base_8hpp__dep__incl.map  abstract__base_8hpp__dep__incl.md5  abstract__base_8hpp__incl.map  abstract__base_8hpp__incl.md5  abstract__base_8hpp_source.html  abstract__unit_8hpp.html  abstract__unit_8hpp__dep__incl.map  abstract__unit_8hpp__dep__incl.md5  abstract__unit_8hpp__incl.map  abstract__unit_8hpp__incl.md5  abstract__unit_8hpp_source.html  annotated.html  base_8hpp.html  base_8hpp__dep__incl.map  base_8hpp__dep__incl.md5  base_8hpp__incl.map  base_8hpp__incl.md5  base_8hpp_source.html  class_abstract_base-members.html  class_abstract_base.html  class_abstract_base__coll__graph.map  class_abstract_base__coll__graph.md5  class_abstract_base__inherit__graph.map  class_abstract_base__inherit__graph.md5  class_abstract_unit-members.html  class_abstract_unit.html  class_abstract_unit__coll__graph.map  class_abstract_unit__coll__graph.md5  class_abstract_unit__inherit__graph.map  class_abstract_unit__inherit__graph.md5  class_base-members.html  class_base.html  class_base__coll__graph.map  class_base__coll__graph.md5  class_base__inherit__graph.map  class_base__inherit__graph.md5  class_colleague-members.html  class_colleague.html  class_colleague__coll__graph.map  (+166 more)
html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  all_e.html  all_e.js  all_f.html  all_f.js  classes_0.html  classes_0.js  classes_1.html  classes_2.html  classes_2.js  (+93 more)
linters/: run.sh
linters/cpplint/: cpplint.py
maps/2/: 0.xml
server/: CMakeLists.txt
server/include/: abstract_base.hpp  abstract_building.hpp  abstract_handler.hpp  abstract_unit.hpp  base.hpp  building.hpp  colleague.hpp  command.hpp  game.hpp  handler.hpp  initialiser.hpp  input.hpp  manager.hpp  map.hpp  mediator.hpp  news_maker.hpp  news_taker.hpp  parameter.hpp  player.hpp  real_unit.hpp  skill.hpp  unit.hpp  update.hpp  update_maker.hpp  utils.hpp  vertex.hpp
server/src/: base.cpp  command.cpp  game.cpp  initialiser.cpp  main.cpp  manager.cpp  map.cpp  mediator.cpp  player.cpp  real_unit.cpp  unit.cpp  update.cpp  update_maker.cpp  utils.cpp
server/src/backup/: kick_handler.cpp  move_handler.cpp
server/test/: base_tests.cpp  gtest.cpp  map_tests.cpp  update_maker_tests.cpp
server/test/include/: base_tests.hpp  manager_tests.hpp  map_tests.hpp  mock_base.hpp  mock_colleague.hpp  mock_mediator.hpp  mock_news_taker.hpp  mock_unit.hpp  player_tests.hpp  unit_tests.hpp  update_maker.hpp
server/test/src/: base_tests.cpp  gtest.cpp  manager_tests.cpp  map_tests.cpp  player_test.cpp  unit_tests.cpp
server_side/server/: CMakeLists.txt  main.cpp
server_side/server/game/: CMakeLists.txt
server_side/server/game/include/: abstract_base.hpp  abstract_handler.hpp  abstract_unit.hpp  adapter.hpp  base.hpp  game.hpp  handler.hpp  input.hpp  manager.hpp  manager_impl.hpp  map.hpp  mediator.hpp  news_maker.hpp  news_taker.hpp  player.hpp  real_unit.hpp  state.hpp  unit.hpp  update_maker.hpp
server_side/server/game/src/: adapter.cpp  base.cpp  game.cpp  manager_impl.cpp  map.cpp  player.cpp  real_unit.cpp  unit.cpp  update_maker.cpp
server_side/server/xml_make/: xml.cpp
server_side/test/: CMakeLists.txt
server_side/test/include/: mock_colleague.hpp  mock_mediator.hpp
server_side/test/src/: player_tests.cpp
shared_files/include/: DefaultAbstractFactory.h  Serializable.h  command.hpp  command_factory.hpp  initialiser.hpp  initialiser_factory.hpp  update.hpp  update_factory.hpp
shared_files/src/: command.cpp  initialiser.cpp  update.cpp
